Add quarkus 2.5..2.8, wildfly 26.x
- Add the kafka version to Quarkus POMs
  (Not really needed, but informative)
- Use resteasy-client-api with RESTEasy 4.x
  (resteasy-client-api needs less exclusions than resteasy-client
  for the dependency-existence check)

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ Snap.*.trc
 **/.idea/markdown-navigator/
 **/.idea/runConfigurations.xml
 **/.idea/saveactions_settings.xml
+**/.idea/sonarlint.xml
 **/.idea/sonarlint/issuestore/
 **/.idea/tasks.xml
 **/.idea/uiDesigner.xml
