--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,15 @@
         <module>quarkus-2.2</module> <!-- 2.2 latest Quarkus Red Hat build: https://access.redhat.com/articles/4966181 -->
         <module>quarkus-2.3</module>
         <module>quarkus-2.4</module>
+        <module>quarkus-2.5</module>
+        <module>quarkus-2.6</module>
+        <module>quarkus-2.7</module>
+        <module>quarkus-2.8</module>
         <module>wildfly-23</module>
         <module>wildfly-24</module>
         <module>wildfly-25</module>
+        <module>wildfly-26</module>
+        <module>wildfly-26.1</module>
         <module>update-checker</module>
     </modules>
 
@@ -76,51 +82,51 @@
         <!-- for plugins see also the section in README.md -->
 
         <!-- non-apache maven plugin versions -->
-        <asciidoctor.plugin.version>2.2.1</asciidoctor.plugin.version>
-        <build-helper.plugin.version>3.2.0</build-helper.plugin.version>
-        <docker.plugin.version>0.37.0</docker.plugin.version>
-        <jacoco.plugin.version>0.8.7</jacoco.plugin.version>
+        <asciidoctor.plugin.version>2.2.2</asciidoctor.plugin.version>
+        <build-helper.plugin.version>3.3.0</build-helper.plugin.version>
+        <docker.plugin.version>0.39.1</docker.plugin.version>
+        <jacoco.plugin.version>0.8.8</jacoco.plugin.version>
         <nexus-staging.plugin.version>1.6.8</nexus-staging.plugin.version>
-        <openapi-generator.plugin.version>5.3.0</openapi-generator.plugin.version>
-        <swagger-codegen.plugin.version>3.0.29</swagger-codegen.plugin.version>
-        <versions.plugin.version>2.7</versions.plugin.version>
-        <wildfly.plugin.version>2.0.2.Final</wildfly.plugin.version>
+        <openapi-generator.plugin.version>5.4.0</openapi-generator.plugin.version>
+        <swagger-codegen.plugin.version>3.0.34</swagger-codegen.plugin.version>
+        <versions.plugin.version>2.10.0</versions.plugin.version>
+        <wildfly.plugin.version>3.0.0.Final</wildfly.plugin.version>
 
         <!-- apache maven plugin versions (in alphabetical order) -->
         <maven.assembly.plugin.version>3.3.0</maven.assembly.plugin.version>
-        <maven.clean.plugin.version>3.1.0</maven.clean.plugin.version>
-        <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
+        <maven.clean.plugin.version>3.2.0</maven.clean.plugin.version>
+        <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
         <maven.dependency.plugin.version>3.2.0</maven.dependency.plugin.version>
         <maven.deploy.plugin.version>2.8.2</maven.deploy.plugin.version>
         <maven.ear.plugin.version>3.2.0</maven.ear.plugin.version>
         <maven.ejb.plugin.version>3.1.0</maven.ejb.plugin.version>
-        <maven.enforcer.plugin.version>3.0.0-M3</maven.enforcer.plugin.version>
+        <maven.enforcer.plugin.version>3.0.0</maven.enforcer.plugin.version>
         <maven.failsafe.plugin.version>2.22.2</maven.failsafe.plugin.version>
         <maven.install.plugin.version>2.5.2</maven.install.plugin.version>
-        <maven.jar.plugin.version>3.2.0</maven.jar.plugin.version>
-        <maven.javadoc.plugin.version>3.3.1</maven.javadoc.plugin.version>
+        <maven.jar.plugin.version>3.2.2</maven.jar.plugin.version>
+        <maven.javadoc.plugin.version>3.4.0</maven.javadoc.plugin.version>
         <maven.rar.plugin.version>2.4</maven.rar.plugin.version>
         <maven.release.plugin.version>2.5.3</maven.release.plugin.version>
         <maven.resources.plugin.version>3.2.0</maven.resources.plugin.version>
-        <maven.scm.plugin.version>1.12.0</maven.scm.plugin.version>
-        <maven.shade.plugin.version>3.2.4</maven.shade.plugin.version>
-        <maven.site.plugin.version>3.9.1</maven.site.plugin.version>
+        <maven.scm.plugin.version>1.12.2</maven.scm.plugin.version>
+        <maven.shade.plugin.version>3.3.0</maven.shade.plugin.version>
+        <maven.site.plugin.version>3.12.0</maven.site.plugin.version>
         <maven.source.plugin.version>3.2.1</maven.source.plugin.version>
         <maven.surefire.plugin.version>${maven.failsafe.plugin.version}</maven.surefire.plugin.version>
         <maven.war.plugin.version>3.3.2</maven.war.plugin.version>
 
         <!-- artifact versions -->
         <apache.commons.lang3.version>3.12.0</apache.commons.lang3.version>
-        <logback.version>1.2.6</logback.version>
-        <lombok.version>1.18.22</lombok.version>
+        <logback.version>1.2.11</logback.version>
+        <lombok.version>1.18.24</lombok.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <mapstruct.version>1.4.2.Final</mapstruct.version>
-        <slf4j.version>1.7.32</slf4j.version>
+        <slf4j.version>1.7.36</slf4j.version>
 
         <!-- latest Jackson version for projects independent of an application server (AS) -->
         <!-- most of the AS submodules redefine it with an older version -->
-        <jackson-2-version>2.13.0</jackson-2-version>
-        <jackson-bom.version>2.13.0</jackson-bom.version>
+        <jackson-2-version>2.13.2</jackson-2-version>
+        <jackson-bom.version>2.13.2.20220328</jackson-bom.version>
 
         <!-- latest version for projects independent of an application server (AS) -->
         <!-- with an AS it is redefined to be the version used by the AS's resteasy artifact -->
@@ -135,19 +141,19 @@
         <!-- byte code manipulation tools, mostly used for tests, but not exclusively -->
         <!-- note that byte-buddy pulls in asm, so asm.version should be the one used by the given byte-buddy -->
         <!-- (check `version.asm` in maven3_repo\net\bytebuddy\byte-buddy-parent\x.y.z\byte-buddy-parent-x.y.z.pom) -->
-        <asm.version>9.2</asm.version>
-        <byte-buddy.version>1.12.0</byte-buddy.version>
+        <asm.version>9.3</asm.version>
+        <byte-buddy.version>1.12.9</byte-buddy.version>
 
         <!-- testing and static analysis -->
         <opentest4j.version>1.2.0</opentest4j.version>
-        <junit.platform.version>1.8.1</junit.platform.version>
-        <junit.jupiter.version>5.8.1</junit.jupiter.version>
+        <junit.platform.version>1.8.2</junit.platform.version>
+        <junit.jupiter.version>5.8.2</junit.jupiter.version>
         <hamcrest.version>2.2</hamcrest.version>
-        <mockito.version>4.0.0</mockito.version>
-        <equalsverifier.version>3.7.2</equalsverifier.version>
-        <json.unit.version>2.28.0</json.unit.version>
+        <mockito.version>4.5.0</mockito.version>
+        <equalsverifier.version>3.10</equalsverifier.version>
+        <json.unit.version>2.34.0</json.unit.version>
         <jsonassert.version>1.5.0</jsonassert.version>
-        <restassured.version>4.4.0</restassured.version>
+        <restassured.version>5.0.1</restassured.version>
         <wiremock.version>2.27.2</wiremock.version>
 
         <!-- Docker has a special DNS name 'host.docker.internal', but only starting with Docker 18.03... -->
