--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
     <modules>
         <module>quarkus-2.7</module> <!-- 2.7 latest Quarkus Red Hat build: https://access.redhat.com/articles/4966181 -->
         <module>quarkus-2.8</module>
+        <module>quarkus-2.9</module>
+        <module>quarkus-2.10</module>
         <module>wildfly-24</module>
         <module>wildfly-25</module>
         <module>wildfly-26</module>
@@ -76,13 +78,13 @@
         <!-- non-apache maven plugin versions -->
         <asciidoctor.plugin.version>2.2.2</asciidoctor.plugin.version>
         <build-helper.plugin.version>3.3.0</build-helper.plugin.version>
-        <docker.plugin.version>0.39.1</docker.plugin.version>
+        <docker.plugin.version>0.40.1</docker.plugin.version>
         <jacoco.plugin.version>0.8.8</jacoco.plugin.version>
         <nexus-staging.plugin.version>1.6.8</nexus-staging.plugin.version>
-        <openapi-generator.plugin.version>5.4.0</openapi-generator.plugin.version>
+        <openapi-generator.plugin.version>6.0.0</openapi-generator.plugin.version>
         <swagger-codegen.plugin.version>3.0.34</swagger-codegen.plugin.version>
-        <versions.plugin.version>2.10.0</versions.plugin.version>
-        <wildfly.plugin.version>3.0.0.Final</wildfly.plugin.version>
+        <versions.plugin.version>2.11.0</versions.plugin.version>
+        <wildfly.plugin.version>3.0.1.Final</wildfly.plugin.version>
 
         <!-- apache maven plugin versions (in alphabetical order) -->
         <maven.assembly.plugin.version>3.3.0</maven.assembly.plugin.version>
@@ -91,8 +93,8 @@
         <maven.dependency.plugin.version>3.2.0</maven.dependency.plugin.version>
         <maven.deploy.plugin.version>2.8.2</maven.deploy.plugin.version>
         <maven.ear.plugin.version>3.2.0</maven.ear.plugin.version>
-        <maven.ejb.plugin.version>3.1.0</maven.ejb.plugin.version>
-        <maven.enforcer.plugin.version>3.0.0</maven.enforcer.plugin.version>
+        <maven.ejb.plugin.version>3.2.1</maven.ejb.plugin.version>
+        <maven.enforcer.plugin.version>3.1.0</maven.enforcer.plugin.version>
         <maven.failsafe.plugin.version>2.22.2</maven.failsafe.plugin.version>
         <maven.install.plugin.version>2.5.2</maven.install.plugin.version>
         <maven.jar.plugin.version>3.2.2</maven.jar.plugin.version>
@@ -100,7 +102,7 @@
         <maven.rar.plugin.version>2.4</maven.rar.plugin.version>
         <maven.release.plugin.version>2.5.3</maven.release.plugin.version>
         <maven.resources.plugin.version>3.2.0</maven.resources.plugin.version>
-        <maven.scm.plugin.version>1.12.2</maven.scm.plugin.version>
+        <maven.scm.plugin.version>1.13.0</maven.scm.plugin.version>
         <maven.shade.plugin.version>3.3.0</maven.shade.plugin.version>
         <maven.site.plugin.version>3.12.0</maven.site.plugin.version>
         <maven.source.plugin.version>3.2.1</maven.source.plugin.version>
@@ -112,13 +114,13 @@
         <logback.version>1.2.11</logback.version>
         <lombok.version>1.18.24</lombok.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-        <mapstruct.version>1.4.2.Final</mapstruct.version>
+        <mapstruct.version>1.5.2.Final</mapstruct.version>
         <slf4j.version>1.7.36</slf4j.version>
 
         <!-- latest Jackson version for projects independent of an application server (AS) -->
         <!-- most of the AS submodules redefine it with an older version -->
-        <jackson-2-version>2.13.2</jackson-2-version>
-        <jackson-bom.version>2.13.2.20220328</jackson-bom.version>
+        <jackson-2-version>2.13.3</jackson-2-version>
+        <jackson-bom.version>2.13.3</jackson-bom.version>
 
         <!-- latest version for projects independent of an application server (AS) -->
         <!-- with an AS it is redefined to be the version used by the AS's resteasy artifact -->
@@ -134,18 +136,18 @@
         <!-- note that byte-buddy pulls in asm, so asm.version should be the one used by the given byte-buddy -->
         <!-- (check `version.asm` in maven3_repo\net\bytebuddy\byte-buddy-parent\x.y.z\byte-buddy-parent-x.y.z.pom) -->
         <asm.version>9.3</asm.version>
-        <byte-buddy.version>1.12.9</byte-buddy.version>
+        <byte-buddy.version>1.12.11</byte-buddy.version>
 
         <!-- testing and static analysis -->
         <opentest4j.version>1.2.0</opentest4j.version>
         <junit.platform.version>1.8.2</junit.platform.version>
         <junit.jupiter.version>5.8.2</junit.jupiter.version>
         <hamcrest.version>2.2</hamcrest.version>
-        <mockito.version>4.5.0</mockito.version>
+        <mockito.version>4.6.1</mockito.version>
         <equalsverifier.version>3.10</equalsverifier.version>
-        <json.unit.version>2.34.0</json.unit.version>
+        <json.unit.version>2.35.0</json.unit.version>
         <jsonassert.version>1.5.0</jsonassert.version>
-        <restassured.version>5.0.1</restassured.version>
+        <restassured.version>5.1.1</restassured.version>
         <wiremock.version>2.27.2</wiremock.version>
 
         <!-- Docker has a special DNS name 'host.docker.internal', but only starting with Docker 18.03... -->
